# SysY2022Compiler

./: .clang-format  .gitignore  CMakeLists.txt  README.md  checktests.sh  clean_compile_test.sh  compile.sh  configure_and_compile.sh  create_commit.sh  packup.sh  run.sh  run_compile_test.sh
source/: CMakeLists.txt  Test.cc  main.cc
source/include/: Common.h
tests/: ArmHelperTest.cc  BitContainerTest.cc  CFGTest.cc  CMakeLists.txt  DominatorTreeTest.cc  LiveAnalyzerTest.cc  LoopDetectorTest.cc  LoopOptimizerTest.cc  RegAllocTest.cc  RopeContainerTest.cc  SimpleOptimizerTest.cc  TACTest.cc  Test.cpp  Test0.cc  Test1.cc  UtilityTest.cc  a.out  output.txt
tests/compile_test_cases/: test1.sy
tests/compile_test_cases/2022_functional/: 95_float.sy
